--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.0.1",
+    "autoprefixer": "^10.4.16",
     "nodemon": "^3.0.1",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "vite": "^4.0.4"
   }
 }
