--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "build": "vite build"
   },
   "dependencies": {
+    "connect-mongodb-session": "^3.1.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "react": "^18.2.0",
@@ -19,7 +22,9 @@
     "vite-express": "*"
   },
   "devDependencies": {
+    "@types/connect-mongodb-session": "^2.4.6",
     "@types/express": "^4.17.15",
+    "@types/express-session": "^1.17.9",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
