--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
     "build": "vite build"
   },
   "dependencies": {
-    "connect-mongodb-session": "^3.1.1",
-    "crypto": "^1.0.1",
+    "@prisma/client": "^5.13.0",
+    "axios": "^1.6.8",
+    "connect-pg-simple": "^9.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongodb": "^6.2.0",
-    "mongoose": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
+    "uuid": "^9.0.1",
     "vite-express": "*"
   },
   "devDependencies": {
@@ -29,10 +29,12 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/uuid": "^9.0.8",
     "@vitejs/plugin-react": "^3.0.1",
     "autoprefixer": "^10.4.16",
     "nodemon": "^3.0.1",
     "postcss": "^8.4.31",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.3.5",
     "vite": "^4.0.4"
   }
