--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "connect-pg-simple": "^9.0.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
+    "google-auth-library": "^9.10.0",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "ts-node": "^10.9.1",
@@ -24,7 +28,9 @@
   },
   "devDependencies": {
     "@types/connect-mongodb-session": "^2.4.6",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.15",
+    "@types/express-formidable": "^1.2.3",
     "@types/express-session": "^1.17.9",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
