--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@prisma/client": "^5.13.0",
     "axios": "^1.7.2",
+    "camelize": "^1.0.1",
     "connect-pg-simple": "^9.0.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
@@ -27,6 +28,7 @@
     "vite-express": "*"
   },
   "devDependencies": {
+    "@types/camelize": "^1.0.0",
     "@types/connect-mongodb-session": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.15",
