--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "@prisma/client": "^5.13.0",
     "axios": "^1.7.2",
-    "bootstrap": "^5.3.3",
     "camelize": "^1.0.1",
     "connect-pg-simple": "^9.0.1",
     "cookie-parser": "^1.4.6",
@@ -21,7 +23,6 @@
     "express-session": "^1.17.3",
     "google-auth-library": "^9.10.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
