--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@observablehq/plot": "^0.6.15",
     "@prisma/client": "^5.13.0",
     "axios": "^1.7.2",
     "camelize": "^1.0.1",
     "connect-pg-simple": "^9.0.1",
     "cookie-parser": "^1.4.6",
+    "d3": "^7.9.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
