--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/camelize": "^1.0.0",
     "@types/connect-mongodb-session": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
+    "@types/d3": "^7.4.3",
     "@types/express": "^4.17.15",
     "@types/express-formidable": "^1.2.3",
     "@types/express-session": "^1.17.9",
