--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "uuid": "^9.0.1",
-    "vite-express": "*"
+    "vite-express": "*",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/camelize": "^1.0.0",
