--- a/package.json
+++ b/package.json
@@ -17,15 +17,14 @@
     "axios": "^1.7.2",
     "camelize": "^1.0.1",
     "connect-pg-simple": "^9.0.1",
-    "cookie-parser": "^1.4.6",
     "d3": "^7.9.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
-    "google-auth-library": "^9.10.0",
+    "firebase": "^10.12.2",
+    "firebase-admin": "^12.2.0",
     "react": "^18.2.0",
-    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "ts-node": "^10.9.1",
