--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -15,5 +15,5 @@
     "isolatedModules": true,
     "noEmit": true
   },
-  "include": ["src"]
+  "include": ["src", "src/middleware", "src/models", "src/routes", "src/services", "src/tasks", "src/main.ts"]
 }
