--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@observablehq/plot": "^0.6.15",
+    "axios": "^1.7.2",
     "d3": "^7.9.0",
     "firebase": "^10.12.2",
     "react": "^18.3.1",
