--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "firebase-admin": "^12.2.0",
+    "node-cron": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2",
     "uuid": "^10.0.0",
@@ -31,6 +32,7 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "^20.14.8",
+    "@types/node-cron": "^3.0.11",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.4",
     "prisma": "^5.15.1"
