--- a/.github/workflows/firebase-hosting-main-push.yml
+++ b/.github/workflows/firebase-hosting-main-push.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           cd client
+          npm i
           npm run build
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
