--- a/.github/workflows/firebase-hosting-main-push.yml
+++ b/.github/workflows/firebase-hosting-main-push.yml
@@ -6,7 +6,10 @@ on:
   push:
     branches:
       - "main"
-
+permissions:
+  checks: write
+  contents: read
+  pull-requests: write
 jobs:
   build_and_preview:
     runs-on: ubuntu-latest
