--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -8,6 +8,7 @@ on:
       - main
 jobs:
   build_and_deploy:
+    environment: prod
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
