--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,4 @@
-SPOTIFY_AUTH_REDIRECT_URL="http://localhost:3000/api/spotify/callback"
+SERVER_URL="http://localhost:8080"
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 SPOTIFY_SCOPES="user-top-read user-read-email"
